Add ListExhibitServlet as class and to web xml

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="w3-bar w3-light-blue w3-padding-large w3-padding-24">
-        <button class="w3-btn w3-hover-light-blue w3-round-large" onclick="location.href='/list'">List exhibits</button>
+        <button class="w3-btn w3-hover-light-blue w3-round-large" onclick="location.href='/listExhibit'">List exhibits</button>
         <button class="w3-btn w3-hover-green w3-round-large" onclick="location.href='/add'">Add exhibit</button>
         <button class="w3-btn w3-hover-orange w3-round-large" onclick="location.href='/delete'">Delete exhibit</button>
         <button class="w3-btn w3-hover-pink w3-round-large" onclick="location.href='/update'">Update exhibit</button>
