Working version, all crud operations are done!

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,7 +23,7 @@
         <button class="w3-btn w3-hover-light-blue w3-round-large" onclick="location.href='/listExhibit'">List exhibits</button>
         <button class="w3-btn w3-hover-green w3-round-large" onclick="location.href='/addExhibit'">Add exhibit</button>
         <button class="w3-btn w3-hover-orange w3-round-large" onclick="location.href='/deleteExhibit'">Delete exhibit</button>
-        <button class="w3-btn w3-hover-pink w3-round-large" onclick="location.href='/updateExhibit'">Update exhibit</button>
+        <button class="w3-btn w3-hover-pink w3-round-large" onclick="location.href='/updateExhibitList'">Update exhibit</button>
     </div>
 </div>
 </body>
