--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,7 +41,7 @@
                 <div class="carousel-item active">
                     <img src="1.jpeg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
+                        <h5>First slide</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                         <!--<button class="btn btn-info btn-lg">Shop Now</button>-->
                     </div>
@@ -49,7 +49,7 @@
                 <div class="carousel-item">
                     <img src="2.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
+                        <h5>Second slide</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <!--<button class="btn btn-info btn-lg">Shop Now</button>-->
                     </div>
@@ -57,7 +57,7 @@
                 <div class="carousel-item">
                     <img src="3.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
+                        <h5>Third slide</h5>
                         <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
                         <!--<button class="btn btn-info btn-lg">Shop Now</button>-->
                     </div>
