Formatted jsp files with ctrl+alt+L

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <title>Super app!</title>
     <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css"
+          href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
@@ -24,10 +28,14 @@
     </div>
 
     <div class="w3-bar w3-light-blue w3-padding-large w3-padding-24">
-        <button class="w3-btn w3-hover-light-blue w3-round-large" onclick="location.href='/listExhibit'">List exhibits</button>
+        <button class="w3-btn w3-hover-light-blue w3-round-large" onclick="location.href='/listExhibit'">List exhibits
+        </button>
         <button class="w3-btn w3-hover-green w3-round-large" onclick="location.href='/addExhibit'">Add exhibit</button>
-        <button class="w3-btn w3-hover-orange w3-round-large" onclick="location.href='/deleteExhibit'">Delete exhibit</button>
-        <button class="w3-btn w3-hover-pink w3-round-large" onclick="location.href='/updateExhibitList'">Update exhibit</button>
+        <button class="w3-btn w3-hover-orange w3-round-large" onclick="location.href='/deleteExhibit'">Delete exhibit
+        </button>
+        <button class="w3-btn w3-hover-pink w3-round-large" onclick="location.href='/updateExhibitList'">Update
+            exhibit
+        </button>
     </div>
 
     <div class="bd-example">
