add find guide-exhibit relation method

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,7 +37,10 @@
             exhibit
         </button>
     </div>
-
+    <div class="w3-bar w3-yellow w3-padding-large w3-padding-24">
+        <button class="w3-btn w3-hover-light-blue w3-round-large" onclick="location.href='/find'">Find responsible for exhibits</button>
+        <button class="w3-btn w3-hover-light-blue w3-round-large" onclick="location.href='/???'">Add responsible</button>
+    </div>
     <div class="bd-example">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
