--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,19 @@
 </head>
 
 <body class="w3-light-grey">
+
+<div class="container-fluid bg-dark header-top d-none d-md-block">
+    <div class="container ">
+        <div class="row text-light pt-2 pb-2">
+            <div class="col-md-5"><i class="fa fa-envelope-o" aria-hidden="true"></i>
+                https://github.com/DimaNarepeha
+            </div>
+            <div class="col-md-5"><i class="fa fa-envelope-o" aria-hidden="true"></i>
+                https://github.com/AnastasiyaStr
+            </div>
+        </div>
+    </div>
+</div>
 <div class="w3-container w3-light-green w3-opacity w3-right-align">
     <h1 align="center">Basic crud operations</h1>
 </div>
