add javascript effects

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,6 +30,7 @@
 </div>
 <div class="w3-container w3-light-green w3-opacity w3-right-align">
     <h1 align="center">Basic crud operations</h1>
+
 </div>
 
 <div class="w3-container  w3-center">
@@ -49,6 +50,7 @@
         <button class="w3-btn w3-hover-pink w3-round-large" onclick="location.href='/updateExhibitList'">Update
             exhibit
         </button>
+
     </div>
     <div class="w3-bar w3-yellow w3-padding-large w3-padding-24">
         <button class="w3-btn w3-hover-light-blue w3-round-large" onclick="location.href='/find'">Find responsible for exhibits</button>
@@ -98,6 +100,14 @@
         </div>
     </div>
 
+</div>
+
+<div id="copyright">
+    <div class="container clearfix">
+        <p class="left">&copy; Всі права захищено 2019
+            <br> Веб-розробка: <a href="https://www.facebook.com">Стронціцька Анастасія і Дмитро Нарепеха</a></p>
+        <div class="social"> <a href="#" class="ic-tw black">&nbsp;</a> <a href="https://www.facebook.com" class="ic-fb black">&nbsp;</a> <a href="#" class="ic-pn black">&nbsp;</a> <a href="https://google.com" class="ic-gl black">&nbsp;</a> </div>
+    </div>
 </div>
 
 </body>
